[#785] Fix rotated table header alignment

--- a/census/static/scss/_tables.scss
+++ b/census/static/scss/_tables.scss
@@ -289,12 +289,24 @@ td.previous-results {
   }
 
   thead tr th {
-    height: 100px;
+    height: 118px;
 
     .dataset-title-context {
       display: block;
       @include rotate(-90deg);
       padding: 8px;
+    }
+
+    &.datasetHeader {
+      vertical-align: inherit;
+      div {
+        transform: rotate(-90deg) translateX(-50%);
+        a {
+          height: 100%;
+          width: 100%;
+          display: block;
+        }
+      }
     }
   }
 }
